--- a/webapp/assets/css/myPageCare/careReferenceCheck.css
+++ b/webapp/assets/css/myPageCare/careReferenceCheck.css
@@ -1,35 +1,39 @@
+/* 밑의 주석 처리 전까지는 공통 */
+/* 전체 페이지 설정 */
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Pretendard-Regular';
+  font-family: 'pretendard-regular';
 }
+/* 폰트 공통 설정 */
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
+/* 전체 바디 색 설정 */
 
-header,
-footer {
-  width: 100%;
-  height: 110px;
-  background-color: bisque;
+body {
+  background-color: #ffffff;
 }
+/* main 페이지 상세 설정 */
 
 main {
-  width: 100%;
-  height: calc(100vh - 200px);
   display: flex;
+  min-height: calc(100vh - 220px);
 }
+/* 마이페이지 왼쪽 사이드 바 설정 */
 
 .main_sidebar {
   width: 180px;
-  height: 100%;
-  background-color: rgb(159, 159, 255);
-  display: flex;
-  flex-direction: column;
+  background-color: #2f4db1;
+  color: white;
+  padding: 20px 0;
 }
+/* 사람 모양 이미지 설정 */
+
 .main_sidebar img {
   height: 130px;
   width: 130px;
@@ -38,29 +42,39 @@ main {
   margin: 0 auto 20px;
   display: block;
 }
-.main_sidebar div {
-  height: 150px;
-  width: 150px;
-  background-color: rgb(27, 255, 217);
-  border-radius: 100%;
-  margin: 15px;
+/* 사이드 바의 목록 스타일 설정 */
+
+.main_sidebar ul {
+  list-style: none;
+  padding-left: 0;
 }
-.main_sidebar ul li {
-  padding: 15px;
+/* 글자들의 패딩 및 커서 설정 */
+
+.main_sidebar li {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
+/* 개인정보 수정, 찜한 목록 등 사이드바 상세 설정 */
+
+.main_sidebar li a {
+  padding: 12px 20px;
+  cursor: pointer;
   color: #ffffff;
 }
 /* ********************* */
+/* 전체 설정 */
 .careReferenceCheck {
   flex: 1;
   padding: 40px 100px;
 }
-
+/* 제목 설정 */
 .title h2 {
   padding: 5px;
   font-size: 30px;
   border: 2px solid #000;
 }
-
+/* 상세정보 스타일 */
 .careReferenceCheck_info {
   display: flex;
   gap: 12px;
@@ -68,10 +82,11 @@ main {
   font-size: 24px;
   border: 2px solid #000;
 }
+/* 디스플레이를 블럭으로 설정하기 */
 .careReferenceCheck_info span {
   display: block;
 }
-
+/* 상세 내역 스타일 설정 */
 .careReferenceCheck_content {
   margin-top: 10px;
   padding: 12px;
@@ -82,13 +97,14 @@ main {
   font-size: 18px;
   box-sizing: border-box;
 }
-
+/* 버튼 스타일 설정 */
 .buttons {
   display: flex;
   justify-content: flex-end;
   gap: 10px;
   margin: 14px 0;
 }
+/* 버튼의 버튼 스타일 */
 .buttons a,
 .buttons button {
   min-width: 120px;
@@ -105,46 +121,41 @@ main {
   text-decoration: none;
   cursor: pointer;
 }
+/* 버튼 리스트 색 */
 .btn_list {
   background: #f1f1f1;
   color: #222;
 }
+/* 취소버튼 스타일 */
 .btn_cancle {
   background: #FF4D4F;
   color: #fff;
 }
+/* 확인버튼 스타일 */
 .btn_compelete {
   background: #2F52AA;
   color: #fff;
 }
-
+/* 댓글 스타일 */
 .reply {
   border: 2px solid #000;
 }
+/* 댓글 간격 */
 .comment {
   padding: 5px;
   border: 2px solid #000;
 }
-.reply h4 {
-  padding: 10px;
-}
+/* 글쓴이 스타일  */
 .author {
   font-weight: bold;
   display: block;
 }
+/* 답변 내용 */
 .cmt_content {
   margin: 5px 5px 5px 10px;
 }
+/* 날짜 블럭 */
 .date {
   display: block;
   text-align: right;
-}
-
-.comments form text {
-  height: 60px;
-  padding: 10px;
-}
-.comments input {
-  width: 800px;
-  text-align: center;
 }
