--- a/webapp/assets/css/myPageCare/careMatching.css
+++ b/webapp/assets/css/myPageCare/careMatching.css
@@ -1,8 +1,12 @@
+/* 밑의 주석 처리 전까지는 공통 */
+/* 전체 페이지 설정 */
 * {
   margin: 0;
   padding: 0;
   font-family: 'pretendard-regular';
 }
+
+/* 폰트 공통 설정 */
 
 @font-face {
   font-family: 'Pretendard-Regular';
@@ -11,14 +15,20 @@
   font-style: normal;
 }
 
+/* 전체 바디 색 설정 */
+
 body {
   background-color: #ffffff;
 }
+
+/* main 페이지 상세 설정 */
 
 main {
   display: flex;
   min-height: calc(100vh - 220px);
 }
+
+/* 마이페이지 왼쪽 사이드 바 설정 */
 
 .sidebar {
   width: 180px;
@@ -26,6 +36,8 @@ main {
   color: white;
   padding: 20px 0;
 }
+
+/* 사람 모양 이미지 설정 */
 
 .sidebar img {
   height: 130px;
@@ -36,10 +48,14 @@ main {
   display: block;
 }
 
+/* 사이드 바의 목록 스타일 설정 */
+
 .sidebar ul {
   list-style: none;
   padding-left: 0;
 }
+
+/* 글자들의 패딩 및 커서 설정 */
 
 .sidebar li {
   padding: 12px 20px;
@@ -47,233 +63,273 @@ main {
   color: #ffffff;
 }
 
+/* 개인정보 수정, 찜한 목록 등 사이드바 상세 설정 */
+
 .sidebar li a {
   padding: 12px 20px;
   cursor: pointer;
   color: #ffffff;
 }
 
-  /* ****************** */
-  .div_mark {
-    background-color: rgb(255, 255, 255);
-    flex: 1;
-    color: white;
-  }
+/* ****************** */
+/* 마이페이지 전체 스타일 설정 */
 
-  .div_mark .title {
-    font-size: 30px;
-    margin: 30px 35px;
+.div_mark {
+  background-color: rgb(255, 255, 255);
+  flex: 1;
+  color: white;
+}
 
-  }
+/* 마이페이지 제목 스타일 설정 */
 
-  .matching_month {
-    background-color: rgb(255, 255, 255);
-    width: 70%;
-    margin: 0 auto;
-    margin-top: 50px;
-    height: 60%;
-    border-radius: 30px;
-    border: solid 5px black;
-  }
+.div_mark .title {
+  font-size: 30px;
+  margin: 30px 35px;
 
-  .months {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-around;
-    border-bottom: solid 1px black;
-    background-color: rgb(255, 255, 255);
-    padding-bottom: 10px;
-  }
+}
 
-  .matching_month ul li {
-    list-style-type: none;
-    background-color: rgb(255, 255, 255);
-    cursor: pointer;
+/* 매칭 할 월 스타일 지정  */
+.matching_month {
+  background-color: rgb(255, 255, 255);
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 50px;
+  height: 60%;
+  border-radius: 30px;
+  border: solid 5px black;
+}
 
-  }
+/* 월의 세부 스타일 지정 */
+.months {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  border-bottom: solid 1px black;
+  background-color: rgb(255, 255, 255);
+  padding-bottom: 10px;
+}
 
-  .matching {
-    display: flex;
-    margin-top: 15px;
-  }
+/* 월의 세부 스타일 지정 */
+.matching_month ul li {
+  list-style-type: none;
+  background-color: rgb(255, 255, 255);
+  cursor: pointer;
 
-  .matching_day {
-    width: 180px;
-    text-align: center;
-  }
+}
 
-  .matching_member {
-    width: 180px;
-    text-align: center;
-  }
+/* 매칭 표시될 것들 스타일 */
+.matching {
+  display: flex;
+  margin-top: 15px;
+}
 
-  .matching_time {
-    width: 180px;
-    text-align: center;
-  }
+/* 매칭 표시될 것들 스타일 */
 
-  .matching_point {
-    width: 180px;
-    text-align: center;
-  }
+.matching_day {
+  width: 180px;
+  text-align: center;
+}
 
-  .check {
-    width: 180px;
-    text-align: center;
-  }
+/* 매칭 표시될 것들 스타일 */
 
-  .page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.matching_member {
+  width: 180px;
+  text-align: center;
+}
 
-  .page ul {
-    display: flex;
-    list-style-type: none;
-  }
+/* 매칭 표시될 것들 스타일 */
 
-  .page ul li {
-    margin: 10px;
-  }
+.matching_time {
+  width: 180px;
+  text-align: center;
+}
 
-  .div_add {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-  }
+/* 매칭 표시될 것들 스타일 */
 
-  .div_add button {
-    background-color: #2F52AA;
-    width: 200px;
-    height: 60px;
-    color: white;
-    margin-top: 15px;
-    cursor: pointer;
-    border-radius: 15px;
-  }
+.matching_point {
+  width: 180px;
+  text-align: center;
+}
 
-  #active {
-    color: red;
-  }
+/* 매칭 표시될 것들 스타일 */
 
-  .month {
-    color: black;
-  }
+.check {
+  width: 180px;
+  text-align: center;
+}
 
-  .modal {
-    display: none;
-    position: fixed;
-    top: 0; 
-    left: 0;
-    width: 100%; 
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 500;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+/* 페이지 세부 스타일  */
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .modal.open {
-    display: flex;
-  }
+/* 리스트 스타일 점 없애기 */
+.page ul {
+  display: flex;
+  list-style-type: none;
+}
 
+/* 리스트 마진 추가 */
+.page ul li {
+  margin: 10px;
+}
 
-  #matching_add {
-    display: none;
-    justify-content:center;
-  }
+/* 추가 버튼 클릭시 위치 조정 */
+.div_add {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
 
-  form label{
-    text-align: center;
-    border: 2px solid black;
-    
-  }
-  .modal_container form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
+/* 버튼의 색 지정 */
+.div_add button {
+  background-color: #2F52AA;
+  width: 200px;
+  height: 60px;
+  color: white;
+  margin-top: 15px;
+  cursor: pointer;
+  border-radius: 15px;
+}
 
-  .modal_container form label {
-    font-size: 20px;
-    margin-bottom: 5px;
-  }
-.modal_container form label input{
-    width: 200px;
-    height: 60px;
-    font-size: 20px;
-  }
-  .modal_container .modal_button {
-    display: flex;
-    justify-content: flex-end;
-  }
+/* 선택된 월 색 */
+#active {
+  color: red;
+}
 
-  .modal_container form .input-group {
-    display: flex;
-  }
-  .modal_container form .input-group label {
-    flex: 1;
-  }
+/* 선택 안된 월 색 */
+.month {
+  color: black;
+}
 
-  .modal_container form .input-group input {
-    flex: 2;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 100%;
-  }
+/* 모달 스타일 */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .modal_container {
-    background: #fff;
-    padding: 20px 30px;
-    border-radius: 8px;
-    border: 2px solid #000;
-    max-width: 400px;
-    width: 100%;
-    text-align: center;
-    justify-content: center;
-    top: 0;
-  }
+/* 모달 열림 */
+.modal.open {
+  display: flex;
+}
 
-  .modal_button{
-    margin: 15px;
-  }
+/* 매칭 추가 모달 숨기기 */
 
-  .modal_button #success_modal {
-    background-color: #2F52AA;
-    width: 100px;
-    height: 40px;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-    margin-top: 10px;
-  }
-  .modal_button #cansel_modal {
-    background-color: rgb(255, 0, 0);
-    width: 100px;
-    height: 40px;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-    margin-top: 10px;
-  }
+#matching_add {
+  display: none;
+  justify-content: center;
+}
 
-  #complete_modal {
-    display: none;
-  }
+/* 기본 라벨 */
+form label {
+  text-align: center;
+  border: 2px solid black;
 
-  #complete_modal .modal_container {
-    text-align: center;
-  }
+}
 
-  #complete_modal #success_button {
-    background-color: #2F52AA;
-    width: 100px;
-    height: 40px;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-    margin-top: 20px;
-  }
+/* 모달 정렬하기 */
+.modal_container form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+/* 라벨 설정 */
+.modal_container form label {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+/* 라벨의 인풋 크기 */
+.modal_container form label input {
+  width: 200px;
+  height: 60px;
+  font-size: 20px;
+}
+
+/* 모달 버튼 오른쪽으로 */
+.modal_container .modal_button {
+  display: flex;
+  justify-content: flex-end;
+}
+/* 입력하는 곳 가로로 */
+.modal_container form .input-group {
+  display: flex;
+}
+/* 입력 그룹의 라벨은 비워놓기 */
+.modal_container form .input-group label {
+  flex: 1;
+}
+/* 입력창 비율 크기  */
+.modal_container form .input-group input {
+  flex: 2;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 100%;
+}
+/* 모달 상자 지다인 */
+.modal_container {
+  background: #fff;
+  padding: 20px 30px;
+  border-radius: 8px;
+  border: 2px solid #000;
+  max-width: 400px;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  top: 0;
+}
+/* 모달 버튼 마진 */
+.modal_button {
+  margin: 15px;
+}
+/* 등록 버튼 스타일 */
+.modal_button #success_modal {
+  background-color: #2F52AA;
+  width: 100px;
+  height: 40px;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+/* 취소 버튼 스타일 */
+.modal_button #cansel_modal {
+  background-color: rgb(255, 0, 0);
+  width: 100px;
+  height: 40px;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+/* 완료 모달 숨기기 */
+#complete_modal {
+  display: none;
+}
+/* 완료 모달 중앙으로 */
+#complete_modal .modal_container {
+  text-align: center;
+}
+/* 완료 버튼 스타일 */
+#complete_modal #success_button {
+  background-color: #2F52AA;
+  width: 100px;
+  height: 40px;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-top: 20px;
+}
