--- a/webapp/assets/css/myPageCare/carePost.css
+++ b/webapp/assets/css/myPageCare/carePost.css
@@ -1,8 +1,11 @@
+/* 밑의 주석 처리 전까지는 공통 */
+/* 전체 페이지 설정 */
 * {
   margin: 0;
   padding: 0;
   font-family: 'pretendard-regular';
 }
+/* 폰트 공통 설정 */
 
 @font-face {
   font-family: 'Pretendard-Regular';
@@ -10,15 +13,18 @@
   font-weight: 400;
   font-style: normal;
 }
+/* 전체 바디 색 설정 */
 
 body {
   background-color: #ffffff;
 }
+/* main 페이지 상세 설정 */
 
 main {
   display: flex;
   min-height: calc(100vh - 220px);
 }
+/* 마이페이지 왼쪽 사이드 바 설정 */
 
 .main_sidebar {
   width: 180px;
@@ -26,6 +32,7 @@ main {
   color: white;
   padding: 20px 0;
 }
+/* 사람 모양 이미지 설정 */
 
 .main_sidebar img {
   height: 130px;
@@ -35,54 +42,53 @@ main {
   margin: 0 auto 20px;
   display: block;
 }
+/* 사이드 바의 목록 스타일 설정 */
 
 .main_sidebar ul {
   list-style: none;
   padding-left: 0;
 }
+/* 글자들의 패딩 및 커서 설정 */
 
 .main_sidebar li {
   padding: 12px 20px;
   cursor: pointer;
   color: #ffffff;
 }
+/* 개인정보 수정, 찜한 목록 등 사이드바 상세 설정 */
 
 .main_sidebar li a {
   padding: 12px 20px;
   cursor: pointer;
   color: #ffffff;
 }
-
 /* ============================= */
+/* 전체 영역 */
 .div_mark {
   flex: 1;
   display: flex;
   flex-direction: column;
 }
-
+/* 전체 영역 제목 */
 .div_mark .title {
   font-size: 30px;
   margin: 30px;
 }
-
-form {
-  width: 100%;
-}
-
+/* 게시글 작성 목록 크기 */
 .div_choose {
   width: 500px;
 }
-
+/* 게시글 작성 목록 스타일 */
 .div_choose ul {
   display: flex;
   list-style-type: none;
   padding: 50px 0px 0px 150px;
 }
-
+/* 마진 */
 .div_choose ul li {
   margin: 10px;
 }
-
+/* 페이지 분류 제목 스타일 */
 .mark_nav {
   display: flex;
   margin: 0px 150px;
@@ -92,38 +98,38 @@ form {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
 }
-
+/* 페이지 분류 제목 */
 .mark_nav ul {
   display: flex;
 }
-
+/* 중앙정렬 */
 .mark_nav ul li {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
+/* 체크박스 */
 .mark_nav input {
   margin: 0px 30px;
   width: 30px;
   height: 30px;
 }
-
+/* 작성자 크기 중앙정렬 */
 .name div {
   width: 100px;
   text-align: center;
 }
-
+/* 제목 크기 중앙정렬 */
 .posttitle div {
   width: 900px;
   text-align: center;
 }
-
+/* 날짜 */
 .day div {
   width: 200px;
   text-align: center;
 }
-
+/* 게시글 글 목록 스타일 */
 .mark_list {
   display: flex;
   margin: 0px 150px;
@@ -132,43 +138,43 @@ form {
   background-color: rgb(255, 255, 255);
   border-bottom: 1px solid black;
 }
-
+/* 게시글 목록 가로 */
 .mark_list ul {
   display: flex;
 }
-
+/* 게시글 세부 페이지 중앙정렬 */
 .mark_list ul li {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
+/* 체크박스 크기 */
 .mark_list input {
   margin: 0px 30px;
   width: 30px;
   height: 30px;
 }
-
+/* 페이지 내역 */
 .page {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
+/* 페이지 스타일 */
 .page ul {
   display: flex;
   list-style-type: none;
 }
-
+/* 마진 */
 .page ul li {
   margin: 10px;
 }
-
+/* 버튼 삭제 버튼 */
 .div_delete {
   margin: 0;
   padding: 0;
 }
-
+/* 삭제 버튼 스타일 */
 .btn_list_delete {
   background-color: red;
   color: white;
@@ -179,7 +185,7 @@ form {
   border: 0px;
 }
 
-
+/* 모달 설정 */
 .modal {
   display: none;
   position: fixed;
@@ -196,13 +202,13 @@ form {
   opacity: 0;
   border-radius: 15px;
 }
-
+/* 모달 열기 */
 .modal.open {
   display: flex;
   visibility: visible;
   opacity: 1;
 }
-
+/* 모달 박스 스타일 */
 .modal_box {
   background-color: #ffffff;
   padding: 30px;
@@ -210,14 +216,14 @@ form {
   width: 100%;
   text-align: center;
 }
-
+/* 모달 버튼 */
 .modal_buttons {
   display: flex;
   justify-content: center;
   gap: 30px;
   margin-top: 15px;
 }
-
+/* 모달 버튼 스타일 */
 .modal_buttons button {
   display: inline-flex;
   align-items: center;
@@ -231,24 +237,24 @@ form {
   border: none;
   min-width: 70px;
 }
-
+/* 확인버튼 스타일 */
 #confirmDelete {
   background-color: #2F52AA;
   color: white;
   margin-left: 10px;
 }
-
+/* 취소버튼 스타일 */
 #cancelDelete {
   background-color: white;
   border: 2px solid red;
   color: black;
 }
-
+/* 확인버튼 스타일 */
 #confirmDelete_check {
   background-color: #2F52AA;
   color: white;
 }
-
+/* 확인버튼 스타일 */
 #check_confirmDelete {
   background-color: #2F52AA;
   color: white;
