--- a/webapp/assets/css/myPageCare/carePostRe.css
+++ b/webapp/assets/css/myPageCare/carePostRe.css
@@ -1,53 +1,40 @@
+/* 밑의 주석 처리 전까지는 공통 */
+/* 전체 페이지 설정 */
 * {
   margin: 0;
   padding: 0;
   font-family: 'pretendard-regular';
 }
+/* 폰트 공통 설정 */
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
+/* 전체 바디 색 설정 */
 
-html {
-  height: 100%;
-}
 body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  background-color: #ffffff;
 }
-main {
-  flex: 1 0 auto;
-}
-#footer {
-  margin-top: auto;
-}
-
-header {
-  width: 100%;
-  height: 110px;
-  background-color: bisque;
-}
-footer {
-  width: 100%;
-  height: 110px;
-  background-color: bisque;
-}
+/* main 페이지 상세 설정 */
 
 main {
-  width: 100%;
   display: flex;
+  min-height: calc(100vh - 220px);
 }
+/* 마이페이지 왼쪽 사이드 바 설정 */
+
 .main_sidebar {
   width: 180px;
-  height: 100%;
-  background-color: rgb(159,159,255);
-  display: flex;
-  flex-direction: column;
+  background-color: #2f4db1;
+  color: white;
+  padding: 20px 0;
 }
-.sidebar img {
+/* 사람 모양 이미지 설정 */
+
+.main_sidebar img {
   height: 130px;
   width: 130px;
   background-color: #ff80ab;
@@ -55,30 +42,42 @@ main {
   margin: 0 auto 20px;
   display: block;
 }
-.main_sidebar div {
-  height: 150px;
-  width: 150px;
-  background-color: rgb(27,255,217);
-  border-radius: 100%;
-  margin: 15px;
+/* 사이드 바의 목록 스타일 설정 */
+
+.main_sidebar ul {
+  list-style: none;
+  padding-left: 0;
 }
-.main_sidebar ul li {
-  padding: 15px;
+/* 글자들의 패딩 및 커서 설정 */
+
+.main_sidebar li {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
+/* 개인정보 수정, 찜한 목록 등 사이드바 상세 설정 */
+
+.main_sidebar li a {
+  padding: 12px 20px;
+  cursor: pointer;
   color: #ffffff;
 }
 
 /* *-************** */
+/* 오른쪽 편집 영역 기본 패딩 */
 .post_edit {
   flex: 1;
   padding: 40px 100px;
 }
 
+/* 제목 박스 스타일 (두꺼운 테두리) */
 .re_title h2 {
   padding: 5px;
   font-size: 30px;
   border: 2px solid black;
 }
 
+/* 글 정보 영역(작성자/날짜 등) */
 .re_post_info {
   display: flex;
   gap: 12px;
@@ -87,10 +86,13 @@ main {
   border: 2px solid black;
   background-color: #fff;
 }
+
+/* 정보 안에 들어갈 항목은 블록으로 줄바꿈 */
 .re_post_info span {
   display: block;
 }
 
+/* 본문 박스 (큰 영역) */
 .re_post_content {
   margin-top: 10px;
   padding: 5px;
@@ -98,6 +100,8 @@ main {
   border: 2px solid black;
   min-height: 500px;
 }
+
+/* 본문 입력창 (테두리 없음, 크기 고정) */
 #contentInput {
   width: 100%;
   height: 460px;
@@ -108,12 +112,15 @@ main {
   resize: vertical;
 }
 
+/* 하단 버튼 줄 (오른쪽 정렬) */
 .buttons {
   display: flex;
   justify-content: flex-end;
   gap: 8px;
   margin: 10px 0;
 }
+
+/* 버튼/링크 공통 모양 */
 .buttons a,
 .buttons button {
   display: inline-flex;
@@ -127,21 +134,26 @@ main {
   cursor: pointer;
   text-decoration: none;
 }
+
+/* 목록으로(회색) */
 .btn_list {
   background: #f1f1f1;
   color: #222;
 }
+
+/* 취소(빨강) */
 .btn_cancle {
   background: #FF4D4F;
   color: #fff;
 }
+
+/* 완료(파랑) */
 .btn_compelete {
   background: #2F52AA;
   color: #fff;
 }
 
-
-
+/* 모달 배경 */
 .modal {
   position: fixed;
   margin-top: 0px;
@@ -152,10 +164,13 @@ main {
   background: rgba(0, 0, 0, .45);
   z-index: 1000;
 }
+
+/* 모달 보이게 */
 .modal.open {
   display: flex;
 }
 
+/* 모달 박스 스타일 */
 .modal-content {
   background: #ffffff;
   border-radius: 18px;
@@ -166,12 +181,15 @@ main {
   box-sizing: border-box;
 }
 
+/* 모달 하단 */
 .modal_buttons {
   display: flex;
   justify-content: center;
   gap: 14px;
   margin-top: 12px;
 }
+
+/* 모달 버튼 기본 스타일 */
 .modal_buttons button {
   display: inline-flex;
   align-items: center;
@@ -185,6 +203,8 @@ main {
   background: #2F52AA;
   color: #fff;
 }
+
+/* 모달 버튼이 링크일 때 모양 */
 .modal_buttons a {
   display: inline-flex;
   align-items: center;
@@ -194,5 +214,4 @@ main {
   border-radius: 12px;
   font-weight: 600;
   text-decoration: none;
-
 }
