--- a/webapp/assets/css/myPageCare/carePwCheck.css
+++ b/webapp/assets/css/myPageCare/carePwCheck.css
@@ -1,43 +1,69 @@
+/* 밑의 주석 처리 전까지는 공통 */
+/* 전체 페이지 설정 */
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Pretendard-Regular';
+  font-family: 'pretendard-regular';
 }
+/* 폰트 공통 설정 */
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
-main {
-  width: 100%;
-  height: calc(100vh - 200px);
-  display: flex;
-  color: #ffffff;
+/* 전체 바디 색 설정 */
+
+body {
+  background-color: #ffffff;
 }
+/* main 페이지 상세 설정 */
+
+main {
+  display: flex;
+  min-height: calc(100vh - 220px);
+}
+/* 마이페이지 왼쪽 사이드 바 설정 */
 
 .main_sidebar {
   width: 180px;
-  height: 100%;
   background-color: #2f4db1;
-  display: flex;
-  flex-direction: column;
   color: white;
+  padding: 20px 0;
 }
+/* 사람 모양 이미지 설정 */
 
-.main_sidebar ul li img {
-  height: 150px;
-  width: 150px;
-  border-radius: 100%;
+.main_sidebar img {
+  height: 130px;
+  width: 130px;
+  background-color: #ff80ab;
+  border-radius: 50%;
+  margin: 0 auto 20px;
+  display: block;
 }
+/* 사이드 바의 목록 스타일 설정 */
 
-.main_sidebar ul li {
-  padding: 15px;
-  color: white;
+.main_sidebar ul {
+  list-style: none;
+  padding-left: 0;
 }
+/* 글자들의 패딩 및 커서 설정 */
 
+.main_sidebar li {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
+/* 개인정보 수정, 찜한 목록 등 사이드바 상세 설정 */
+
+.main_sidebar li a {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
 /* ============================= */
-
+/* 비밀번호 확인 */
 .pw_check{
   flex: 1;
   font-size: 20px;
@@ -45,7 +71,7 @@ main {
   justify-content: center;
   align-items: center;
 }
-
+/* 입력 칸 */
 input{
   width: 400px;
   height: 50px;
@@ -53,10 +79,12 @@ input{
   font-size: 20px;
   border: 1px solid black;
 }
+/* 버튼 클릭 */
 button{
   width: 100px;
   height: 40px;
 }
+/* 오류 창 */
 form div{
   display: block;
   padding-left: 100px;
