--- a/webapp/assets/css/myPageCare/careReference.css
+++ b/webapp/assets/css/myPageCare/careReference.css
@@ -1,8 +1,11 @@
+/* 밑의 주석 처리 전까지는 공통 */
+/* 전체 페이지 설정 */
 * {
   margin: 0;
   padding: 0;
   font-family: 'pretendard-regular';
 }
+/* 폰트 공통 설정 */
 
 @font-face {
   font-family: 'Pretendard-Regular';
@@ -10,15 +13,18 @@
   font-weight: 400;
   font-style: normal;
 }
+/* 전체 바디 색 설정 */
 
 body {
   background-color: #ffffff;
 }
+/* main 페이지 상세 설정 */
 
 main {
   display: flex;
   min-height: calc(100vh - 220px);
 }
+/* 마이페이지 왼쪽 사이드 바 설정 */
 
 .main_sidebar {
   width: 180px;
@@ -26,6 +32,7 @@ main {
   color: white;
   padding: 20px 0;
 }
+/* 사람 모양 이미지 설정 */
 
 .main_sidebar img {
   height: 130px;
@@ -35,24 +42,26 @@ main {
   margin: 0 auto 20px;
   display: block;
 }
+/* 사이드 바의 목록 스타일 설정 */
 
 .main_sidebar ul {
   list-style: none;
   padding-left: 0;
 }
+/* 글자들의 패딩 및 커서 설정 */
 
 .main_sidebar li {
   padding: 12px 20px;
   cursor: pointer;
   color: #ffffff;
 }
+/* 개인정보 수정, 찜한 목록 등 사이드바 상세 설정 */
 
 .main_sidebar li a {
   padding: 12px 20px;
   cursor: pointer;
   color: #ffffff;
 }
-
 
 /* ============================= */
 .div_mark {
