--- a/webapp/assets/css/modalAdmin.css
+++ b/webapp/assets/css/modalAdmin.css
@@ -11,12 +11,14 @@
   justify-content: center;
   align-items: center;
 }
+/* 모달창 바탕 */
 .modal_window{
   position: absolute;
   background-color: white;
   padding: 17px;
   border-radius: 30px;
 }
+/* x 아이콘 이미지 박스 */
 .modal_x_box{
   height: 25px;
   /* background-color: aquamarine; */
@@ -24,11 +26,13 @@
   justify-content: end;
   width: 100%;
 }
+/* x 아이콘 */
 .modal_x{
   height: 100%;
   /* background-color:aqua; */
   right: 0;
 }
+/* 모달 바디 */
 .modal_body_confirm{
   /* 여기 width 값으로 모달 창 크기 조정 가능 */
   width: 400px;
@@ -37,18 +41,21 @@
   flex-direction: column;
   align-items: center;
 }
+/* 모달 내용(뉴스 삭제 완료 모달에서 사용되는 요소) */
 #modal_text{
   font-size: 20px;
   text-align: center;
   padding-top: 30px;
   padding-top: 20px
 }
+/* 모달 내용 */
 .modal_text{
   font-size: 20px;
   text-align: center;
   padding-top: 30px;
   padding-top: 20px
 }
+/* 모달 버튼 영역 */
 .modal_button_box{
   margin-top: 20px;
   display: flex;
@@ -56,6 +63,7 @@
   /* background-color: greenyellow; */
   justify-content: center;
 }
+/* 모달 확인 버튼 */
 .modal_check_button{
   background-color: #1D3266;
   color: white;
@@ -65,6 +73,7 @@
   border: solid 1px black;
   margin: 9px;
 }
+/* 모달 취소 버튼 */
 .modal_cancel_button{
   background-color: white;
   color:#1D3266;
@@ -91,24 +100,29 @@
   border: solid 2px #1D3266;
   border-radius: 15px;
 }
+/* 월 */
 .select_month{
   margin : 20px 0 20px 0;
   display: flex;
   /* background-color: aqua; */
   justify-content: center;
 }
+/* 이전 월 버튼, 다음 월 버튼 */
 #previous_month, #next_month{
   text-align:center;
   /* background-color: pink; */
   flex: 1;
 }
+/* 년, 월 */
 #point_year, #point_month{
   margin: 0 2px;
   /* background-color: aliceblue; */
 }
+/* 내역창 */
 #point_log_list{
   /* background-color: burlywood; */
 }
+/* 내역 */
 .point_log{
   margin: 4px 30px;
   /* background-color: skyblue; */
