--- a/webapp/assets/css/restaurant/restaurantModal.css
+++ b/webapp/assets/css/restaurant/restaurantModal.css
@@ -11,12 +11,14 @@
   justify-content: center;
   align-items: center;
 }
+/* 모달창 배경 */
 .modal_window{
   position: absolute;
   background-color: white;
   padding: 17px;
   border-radius: 30px;
 }
+/* x 버튼 박스 */
 .modal_x_box{
   height: 25px;
   /* background-color: aquamarine; */
@@ -24,11 +26,13 @@
   justify-content: end;
   width: 100%;
 }
+/* 버튼 이미지 */
 .modal_x{
   height: 100%;
   /* background-color:aqua; */
   right: 0;
 }
+/* 모달 바디 */
 .modal_body_confirm{
   /* 여기 width 값으로 모달 창 크기 조정 가능 */
   width: 400px;
@@ -37,18 +41,21 @@
   flex-direction: column;
   align-items: center;
 }
+/* 모달 내용 */
 #modal_text{
   font-size: 20px;
   text-align: center;
   padding-top: 30px;
   padding-top: 20px
 }
+/* 모달 내용(중복됨. 삭제 예정) */
 .modal_text{
   font-size: 20px;
   text-align: center;
   padding-top: 30px;
   padding-top: 20px
 }
+/* 모달 버튼 영역 */
 .modal_button_box{
   margin-top: 20px;
   display: flex;
@@ -56,6 +63,7 @@
   /* background-color: greenyellow; */
   justify-content: center;
 }
+/* 확인버튼  */
 .modal_check_button{
   background-color: #1D3266;
   color: white;
@@ -65,6 +73,7 @@
   border: solid 1px black;
   margin: 9px;
 }
+/* 취소 버튼 */
 .modal_cancel_button{
   background-color: white;
   color:#1D3266;
@@ -73,63 +82,4 @@
   border-radius: 15px;
   border: solid 1px black;
   margin: 9px;
-}
-/* 이름 수정 모달창 설정 */
-#new_name{
-  margin-top: 20px;
-  width: 200px;
-  height: 20px;
-  border: solid 2px black;
-  border-radius: 5px;
-  padding: 0 10px;
-}
-/* 포인트 내역 확인 모달창 설정 */
-.log_window{
-  margin-top: 20px;
-  width: 400px;
-  height: 500px;
-  border: solid 2px #1D3266;
-  border-radius: 15px;
-}
-.select_month{
-  margin : 20px 0 20px 0;
-  display: flex;
-  /* background-color: aqua; */
-  justify-content: center;
-}
-#previous_month, #next_month{
-  text-align:center;
-  /* background-color: pink; */
-  flex: 1;
-}
-#point_year, #point_month{
-  margin: 0 2px;
-  /* background-color: aliceblue; */
-}
-#point_log_list{
-  /* background-color: burlywood; */
-}
-.point_log{
-  margin: 4px 30px;
-  /* background-color: skyblue; */
-  border-bottom: solid 2px black;
-  padding: 5px 0;
-}
-/* 돌봄회원 가입/정보수정 신청 반려 */
-#reason_reject{
-  margin-top: 20px;
-  width: 350px;
-  height: 60px;
-  border: solid 2px black;
-  border-radius: 5px;
-  padding: 0 10px;
-}
-/* 신고게시물 삭제사유 */
-#reason_delete_post{
-  margin-top: 20px;
-  width: 350px;
-  height: 25px;
-  border: solid 2px black;
-  border-radius: 5px;
-  padding: 0 10px;
 }
