--- a/webapp/assets/css/myPageCare/careModify.css
+++ b/webapp/assets/css/myPageCare/careModify.css
@@ -5,6 +5,7 @@
   padding: 0;
   font-family: 'pretendard-regular';
 }
+
 /* 폰트 공통 설정 */
 
 @font-face {
@@ -13,17 +14,20 @@
   font-weight: 400;
   font-style: normal;
 }
+
 /* 전체 바디 색 설정 */
 
 body {
   background-color: #ffffff;
 }
+
 /* main 페이지 상세 설정 */
 
 main {
   display: flex;
   min-height: calc(100vh - 220px);
 }
+
 /* 마이페이지 왼쪽 사이드 바 설정 */
 
 .main_sidebar {
@@ -32,6 +36,7 @@ main {
   color: white;
   padding: 20px 0;
 }
+
 /* 사람 모양 이미지 설정 */
 
 .main_sidebar img {
@@ -42,12 +47,14 @@ main {
   margin: 0 auto 20px;
   display: block;
 }
+
 /* 사이드 바의 목록 스타일 설정 */
 
 .main_sidebar ul {
   list-style: none;
   padding-left: 0;
 }
+
 /* 글자들의 패딩 및 커서 설정 */
 
 .main_sidebar li {
@@ -55,6 +62,7 @@ main {
   cursor: pointer;
   color: #ffffff;
 }
+
 /* 개인정보 수정, 찜한 목록 등 사이드바 상세 설정 */
 
 .main_sidebar li a {
@@ -74,6 +82,7 @@ main {
   margin: 0 auto;
   background: #fff;
 }
+
 /* 알림 정보 스타일 */
 .arlim {
   display: flex;
@@ -88,49 +97,59 @@ main {
   width: 100%;
   flex: 1;
 }
+
 /* 알림 상자 */
 .arlim nav {
   flex: 1;
 }
+
 /* 알림 내용 스타일 */
 .arlim nav ul {
   list-style: none;
 }
+
 /* 알림내용 글자 스타일 */
 .arlim nav ul li {
   font-size: 14px;
   line-height: 1.6;
 }
+
 /* 페이지 세부정보 내용 */
 form {
   margin: 0 0 40px;
 }
+
 /* 상단의 박스 설정 */
 form>div:first-child {
   border: 2px solid #000;
   border-bottom: none;
   background: #fff;
 }
+
 /* 상단의 박스 설정 */
 form>div:first-child>div {
   padding: 10px 14px;
   font-size: 15px;
   font-weight: 700;
 }
+
 /* 정보 수정 메인 */
 .caremodify {
   display: block;
   border: 2px solid #000;
   background: #fff;
 }
+
 /* 회원정보 */
 .member {
   border-top: 2px solid #000;
 }
+
 /* 성명과 이름 칸 */
 .member:first-child {
   border-top: 2px solid #000;
 }
+
 /* 모든 칸의 형식을 표 */
 .member>ul {
   display: grid;
@@ -138,6 +157,7 @@ form>div:first-child>div {
   align-items: center;
   min-height: 58px;
 }
+
 /* 첫번째 있는 것을 가운대로 */
 .member>ul>.info {
   display: flex;
@@ -147,6 +167,7 @@ form>div:first-child>div {
   border-right: 2px solid #000;
   font-weight: 600;
 }
+
 /* 회원이 수정할 수 잇는 칸 스타일 */
 .member>ul>.myinfo {
   display: flex;
@@ -154,22 +175,26 @@ form>div:first-child>div {
   gap: 8px;
   padding: 10px 12px;
 }
+
 /* 표로 만들 수 잇는건 표 형식으로 */
 .member>ul>.myinfo>ul {
   display: grid;
   gap: 8px;
   width: 100%;
 }
+
 /* 글자 중앙 맞춤 */
 .member>ul>.myinfo>ul>li {
   display: flex;
   align-items: center;
   gap: 8px;
 }
+
 /* 입력칸 */
 .member>ul>.myinfo>ul>li input {
   flex: 1;
 }
+
 /* 텍스트로 입력 받는 칸 */
 .myinfo input[type="text"] {
   height: 36px;
@@ -179,6 +204,7 @@ form>div:first-child>div {
   outline: none;
   background: #fff;
 }
+
 /* 비밀번호로 입력 받는 칸 */
 .myinfo input[type="password"] {
   height: 36px;
@@ -188,8 +214,10 @@ form>div:first-child>div {
   outline: none;
   background: #fff;
 }
+
 /* 이메일 입력 할 수 잇는 칸 */
 .myinfo input[type="email"] {
+  width: 300px;
   height: 36px;
   padding: 0 10px;
   border: 2px solid #000;
@@ -197,10 +225,12 @@ form>div:first-child>div {
   outline: none;
   background: #fff;
 }
+
 /* 플레이스 홀더 색 */
 .myinfo input::placeholder {
   color: #9aa0a6;
 }
+
 /* 확인 버튼 색 */
 .myinfo button {
   height: 32px;
@@ -229,6 +259,7 @@ form>div:first-child>div {
   justify-content: center;
   align-items: center;
 }
+
 /* 모달 안의 컨텐츠 */
 .modal-content {
   top: 0px;
@@ -244,17 +275,20 @@ form>div:first-child>div {
   position: absolute;
   transform: translateX(-50%);
 }
+
 /* 모달안의 내용 */
 .modal-content p {
   font-size: 16px;
   margin-bottom: 16px;
 }
+
 /* 모달의 버튼 */
 .modal-buttons {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
+
 /* 모달 안에서의 버튼 */
 .modal-buttons .btn,
 .modal-content button {
@@ -264,4 +298,9 @@ form>div:first-child>div {
   background: #2f4db1;
   color: #fff;
   cursor: pointer;
+}
+
+.error_pw_msg {
+  color: red;
+  font-size: 14px;
 }
